# VoithosHelper1

./: 361233849847644160_799576438088663050.txt  625265223250608138_mine.txt  643013340720922625_mine.txt  738355943665827842_mine.txt  760382257235623957_748720752802660463.txt  760382257235623957_823132325234606100.txt  797433241997017098_488643992628494347.txt  797433241997017098_625265223250608138.txt  797433241997017098_643013340720922625.txt  797433241997017098_698575717683822663.txt  797433241997017098_738251482180091925.txt  797433241997017098_811290162431524978.txt  797433241997017098_814023716802527233.txt  811864132470571038_488643992628494347.txt  811864132470571038_566616056165302282.txt  811864132470571038_625265223250608138.txt  811864132470571038_780032404815478816.txt  811864132470571038_845182628981243915.txt  813678409199910932_625265223250608138.txt  813678409199910932_811290162431524978.txt  813678409199910932_836827467553177632.txt  831579212926156850_761571443196559371.txt  839386391656923157_488643992628494347.txt  839386391656923157_625265223250608138.txt  README.md  antifilter.txt  antilink.txt  blacklisted.txt  copymain.text  exemptspam.txt  keep_alive.py  leaderBoard.txt  main.py  muted.txt  output.txt  prefixes.txt  pyproject.toml  serverDescription.txt  serverIcon.txt  testing.py  (+4 more)
configmpl/matplotlib/: fontlist-v330.json
