[tool.poetry]
name = "voithoshelper1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
google-api-python-client = "^1.12.8"
google="^3.0.0"
discord-py-slash-command = "^1.0.9.5"
PyNaCl ="^1.4.0"
youtube-search-python ="^1.4.2"
pytz = "^2021.1"
youtube-dl = "^2021.3.3"
mcstatus = "^5.1.1"
flask = "^1.1.2"
dblpy = "^0.4.0"
psutil = "^5.8.0"
googletrans="^3.1.0a0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
